styles/40_main_list: fixup klass header wrap

--- a/webroot/styles/40_main_list.css
+++ b/webroot/styles/40_main_list.css
@@ -27,6 +27,7 @@
 .main_list .category .cthead {
 	padding-right: 12px;
 	text-align: right;
+	white-space: nowrap;
 }
 
 .main_list .category .ctbody {
